[project]
name = "winuitest"
version = "0.1.0"
description = "winuitest"
readme = "README.md"
authors = [
    { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["win32more"]

[project.scripts]
winuitest = "winuitest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
